[package]
name = "project_heartbeat_discord"
description = "Project Heartbeat specific discord SDK bindings"
version = "0.1.0"
authors = ["Álex Román Núñez <eirexe123@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license-file = "LICENSE"
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust", rev="e131df2" }
discord_game_sdk = { git = "https://github.com/ldesgoui/discord_game_sdk.git" }
